--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -1,2 +1,3 @@
-<h1>List#index</h1>
-<p>Find me in app/views/list/index.html.erb</p>
+<h1>HYPERLEL</h1>
+<h2>MOARPYLONS</h2>
+<p>MEMEZANDPOTATOES</p>
