--- a/app/views/list/show.html.erb
+++ b/app/views/list/show.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <h1><%= 9+10 %></h1>
+  <h1><%= rand(9001) %></h1>
   <h2>Stuff and things</h2>
   <li>
     <input type="checkbox"></input>
