--- a/app/views/list/show.html.erb
+++ b/app/views/list/show.html.erb
@@ -1,6 +1,7 @@
 <ul>
   <h1><%= rand(9001) %></h1>
   <h2>Stuff and things</h2>
+  <h3><%= ['Pylons', 'Moar Pylons', 'Life Stuff', 'Other Things', 'Games and stuff'].sample %></h3>
   <li>
     <input type="checkbox"></input>
     <span>Complete all missed assignments - Physics</span>
