--- a/app/views/list/show.html.erb
+++ b/app/views/list/show.html.erb
@@ -1,20 +1,19 @@
 <ul>
+  <% @list_desc.each do |todo_desc| %>
   <h1><%= rand(9001) %></h1>
   <h2>Stuff and things</h2>
-  <h3><%= @list_name %></h3>
+  <h3><%= |todo_desc|%></h3>
   <li>
     <input type="checkbox"></input>
     <span>Complete all missed assignments - Physics</span>
-    <strong>4 pomodoros</strong>
   </li>
   <li>
     <input type="checkbox"></input>
     <span>Study rehtoric section for quiz - Communications</span>
-    <strong>2 pomodoros</strong>
   </li>
   <li>
     <input type="checkbox"></input>
     <span>Complete lab assignment #4 - AP Computer Science</span>
-    <strong>3 pomodoros</strong>
   </li>
 </ul>
+<% end %>
