--- a/app/views/list/show.html.erb
+++ b/app/views/list/show.html.erb
@@ -4,7 +4,7 @@
   <% @list_desc.each do |todo_desc| %>
   <li>
     <input type="checkbox"></input>
-    <span><%= |todo_desc| %></span>
+    <span><%= todo_desc %></span>
   </li>
   <% end %>
 </ul>
